components/AutoComplete/autoComplete.module.css
.wrapper {
  position: relative;
  max-width: 700px;
  min-width: 600px;
}

.inputWrapper {
  display: flex;
  border: 1px solid rgba(0, 0, 0, 0.07);
  border-radius: 10px;
  background: transparent;
  box-shadow: 0 2px 6px rgb(0 0 0 / 5%);
}

.textInput {
  text-align: center;
  padding: 15px 0px 15px 30px;
  width: 90%;
  font-size: 24px;
  font-weight: 300;
  border: none;
  border-radius: 50px;
  outline: none;
}

.resultWrapper {
  display: flex;
  flex-direction: column;
  border: 1px solid rgba(0, 0, 0, 0.07);
  box-shadow: 0 2px 6px rgb(0 0 0 / 5%);
  border-radius: 10px;
  position: absolute;
  width: 100%;
  max-height: 260px;
  overflow: scroll;
}

.searchIconWrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 10%;
}

